maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:8: error: forward reference extends over definition of variable sommeAngle
    		 {avance(); sommeAngle = sommeAngle+1}
                            ^